<!--
  Copyright 2020  Cameron Troy,

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.

  @author Cameron Troy, cwtroy@asu.edu
  Software Engineering, CIDSE, ASU Poly

  @version November 2020
 -->

<resources>

    <!--  Homepage -->
    <string name="app_name">ser423_android</string>

    <!-- View titles -->
    <string name="location_list_header">Locations</string>

    <!-- Column Headers -->
    <string name="pd_name">Place Name</string>
    <string name="pd_description">Description</string>

    <!-- Attribute Labels -->
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <string name="category">Category</string>
    <string name="address_title">Address Line 1</string>
    <string name="address_street">Address Line 2</string>
    <string name="elevation">Elevation</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <!-- Button Labels -->
    <string name="save">Save</string>

</resources>