<?xml version="1.0" encoding="utf-8"?>
<!-- This layout shows the details of a single Place Description -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    >

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/description_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ASU-Poly"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/name_label"
        />


    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/category_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_detail"
        />

    <TextView
        android:id="@+id/description_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="a place with some info "
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/description_label" />

    <TextView
        android:id="@+id/category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintBottom_toTopOf="@+id/address_title_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_detail"

        />

    <TextView
        android:id="@+id/category_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@id/category_label"
        android:text="A University"
        />

    <TextView
        android:id="@+id/address_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_detail"
        app:layout_constraintBottom_toTopOf="@id/address_street_label"/>

    <TextView
        android:id="@+id/address_title_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Streety St."
        app:layout_constraintTop_toTopOf="@+id/address_title_label"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        />

    <TextView
        android:id="@+id/address_street_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_street"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_title_detail"
        app:layout_constraintBottom_toBottomOf="@id/elevation_label"/>

    <TextView
        android:id="@+id/address_street_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@+id/address_street_label"
        android:text="Turn right at the door"
        />

    <TextView
        android:id="@+id/elevation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elevation"
        app:layout_constraintBottom_toTopOf="@+id/latitude_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_street_detail" />

    <TextView
        android:id="@+id/elevation_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@id/elevation_label"
        android:text="1ft."
        />

    <TextView
        android:id="@+id/latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/elevation_detail"
        app:layout_constraintBottom_toTopOf="@+id/longitude_label"
        />

    <TextView
        android:id="@+id/latitude_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/latitude_label"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        android:text="yea high"
        />

    <TextView
        android:id="@+id/longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        app:layout_constraintTop_toBottomOf="@+id/latitude_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/longitude_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@id/longitude_label"
        android:text="yea far away"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="107dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
